[package]
name = "webpki-roots"
version = "0.22.4"
edition = "2018"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
readme = "README.md"
license = "MPL-2.0"
description = "Mozilla's CA root certificates for use with webpki"
homepage = "https://github.com/rustls/webpki-roots"
repository = "https://github.com/rustls/webpki-roots"

[dependencies]
webpki = { git = "https://github.com/yunuseozer/webpki", rev = "sgx_1.1.4" }
sgx_tstd = { rev = "v1.1.4-upgrade", git = "https://github.com/yunuseozer/incubator-teaclave-sgx-sdk.git", optional = true }

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

